added payload mapping tutorial

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -352,6 +352,18 @@
 			<h1>Pages in Documentations</h1>
 
 			
+			<a href="https://www.eclipse.org/vorto/documentation/mappingengine/" title="Payload Mapping">
+				<h2>Payload Mapping</h2>
+			</a>
+
+			<br>
+			<p>The payload mapping feature in Eclipse Vorto can be used to transform arbitrary payload to standardized Vorto messages and vice versa.</p>
+
+<p></p>
+ <br><a href="https://www.eclipse.org/vorto/documentation/mappingengine/">[...]</a>
+
+			<hr>
+			
 			<a href="https://www.eclipse.org/vorto/documentation/metamodel_uml/" title="Vorto Meta Model">
 				<h2>Vorto Meta Model</h2>
 			</a>
