--- a/documentation/metamodel_uml/index.html
+++ b/documentation/metamodel_uml/index.html
@@ -391,7 +391,7 @@
 <nav class="pagination" aria-label="Footer">
   <div class="previous">
   
-      <a href="https://www.eclipse.org/vorto/release-notes/" title="Release Notes">
+      <a href="https://www.eclipse.org/vorto/documentation/mappingengine/" title="Payload Mapping">
         <span class="direction">
           Previous
         </span>
@@ -401,7 +401,7 @@
           </div>
           <div class="stretch">
             <div class="title">
-              Release Notes
+              Payload Mapping
             </div>
           </div>
         </div>
