--- a/downloads/index.html
+++ b/downloads/index.html
@@ -513,7 +513,7 @@ After the installation is complete the <strong>Software Updates</strong> dialog 
 <nav class="pagination" aria-label="Footer">
   <div class="previous">
   
-      <a href="https://www.eclipse.org/vorto/tutorials/arduino/" title="Connecting a ESP8266 (Arduino) to Hono">
+      <a href="https://www.eclipse.org/vorto/tutorials/payloadmapping/" title="Mapping device payload to standardized Vorto Function Blocks">
         <span class="direction">
           Previous
         </span>
@@ -523,7 +523,7 @@ After the installation is complete the <strong>Software Updates</strong> dialog 
           </div>
           <div class="stretch">
             <div class="title">
-              Connecting a ESP8266 (Arduino) to Hono
+              Mapping device payload to standardized Vorto Function Blocks
             </div>
           </div>
         </div>
