--- a/gettingstarted/index.html
+++ b/gettingstarted/index.html
@@ -595,14 +595,14 @@ private static final String PASSWORD = &quot;S3cr3t&quot;;
 
   <div class="next">
   
-      <a href="https://www.eclipse.org/vorto/tutorials/grovepi/" title="Connecting a GrovePi to Hono">
+      <a href="https://www.eclipse.org/vorto/tutorials/arduino/" title="Connecting an ESP8266 to Eclipse Hono">
         <span class="direction">
           Next
         </span>
         <div class="page">
           <div class="stretch">
             <div class="title">
-              Connecting a GrovePi to Hono
+              Connecting an ESP8266 to Eclipse Hono
             </div>
           </div>
           <div class="button button-next" role="button" aria-label="Next">
