--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -352,8 +352,20 @@
 			<h1>Pages in Tutorials</h1>
 
 			
-			<a href="https://www.eclipse.org/vorto/tutorials/grovepi/" title="Connecting a GrovePi to Hono">
-				<h2>Connecting a GrovePi to Hono</h2>
+			<a href="https://www.eclipse.org/vorto/tutorials/arduino/" title="Connecting an ESP8266 to Eclipse Hono">
+				<h2>Connecting an ESP8266 to Eclipse Hono</h2>
+			</a>
+
+			<br>
+			<p>This tutorial explains how to generate an Arduino sketch for a given Information Model and send the device data to Eclipse Hono via MQTT.</p>
+
+<p></p>
+ <br><a href="https://www.eclipse.org/vorto/tutorials/arduino/">[...]</a>
+
+			<hr>
+			
+			<a href="https://www.eclipse.org/vorto/tutorials/grovepi/" title="Connecting a GrovePi to Eclipse Hono">
+				<h2>Connecting a GrovePi to Eclipse Hono</h2>
 			</a>
 
 			<br>
@@ -364,15 +376,17 @@
 
 			<hr>
 			
-			<a href="https://www.eclipse.org/vorto/tutorials/arduino/" title="Connecting a ESP8266 (Arduino) to Hono">
-				<h2>Connecting a ESP8266 (Arduino) to Hono</h2>
+			<a href="https://www.eclipse.org/vorto/tutorials/payloadmapping/" title="Mapping device payload to standardized Vorto Function Blocks">
+				<h2>Mapping device payload to standardized Vorto Function Blocks</h2>
 			</a>
 
 			<br>
-			<p>This tutorial explains how to generate an Arduino sketch for a given Information Model and send the device data to Eclipse Hono via MQTT.</p>
+			<p>IoT Devices may not always send their data to the cloud in the structure and protocol that is required by the IoT platform that the devices are integrating with, e.g. AWS IoT, Azure IoT or Eclipse IoT. Eclipse Vorto provides the tools and libraries for you to achieve that.</p>
+
+<p>In this tutorial you are going to learn, how you create a Vorto Mapping Specification that maps a AWS IoT Button JSON payload to standardized <a href="https://github.com/IPSO-Alliance/pub">IPSO</a> Vorto Function Blocks and execute the mapping specification with the Vorto Mapping Engine. You will integrate the AWS IoT Button payload with the Eclipse Ditto Digital Twin service but also learn how to extend the Vorto Mapping Engine to map to other IoT platforms.</p>
 
 <p></p>
- <br><a href="https://www.eclipse.org/vorto/tutorials/arduino/">[...]</a>
+ <br><a href="https://www.eclipse.org/vorto/tutorials/payloadmapping/">[...]</a>
 
 			<hr>
 			
