updated mapping tutorial
Signed-off-by: vlvanchin <vanchinathan.lokanathan@bosch-si.com>

--- a/tutorials/payloadmapping/index.html
+++ b/tutorials/payloadmapping/index.html
@@ -514,7 +514,7 @@ System.out.println(mappedResult.toJson());
 
 <pre><code>&lt;dependency&gt;
    &lt;groupId&gt;org.eclipse.vorto&lt;/groupId&gt;
-   &lt;artifactId&gt;repository-mapping&lt;/artifactId&gt;
+   &lt;artifactId&gt;mapping-engine&lt;/artifactId&gt;
    &lt;version&gt;${vorto.version}&lt;/version&gt;
 &lt;/dependency&gt;
 </code></pre></li>
